# kibad-llm

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  CONTRIBUTING.md  Makefile  NOTES.md  README.md  conf.py  index.html  index.rst  local_run_with_llm.sh  mkdocs.yml  objects.inv  pyproject.toml  pyproject.toml.poetry  requirements.txt  run_in_process.sh  run_with_llm.sh  run_with_llm_login_node_exec.sh  simple_run.sh  sitemap.xml
.github/actions/init-env/: action.yml
.github/workflows/: code_quality_and_tests.yml  github-pages-deployment.yml  tests.yml
.zed/: debug.json
configs/: evaluate.yaml  predict.yaml  predict_single.yaml
configs/dataset/: faktencheck_predictions_with_references.yaml  organism_trends_forest.yaml  organismus_trends_wald_predictions_with_references.yaml  predictions_only.yaml
configs/dataset/predictions/: extraction_result.yaml
configs/dataset/references/: faktencheck_db_converted.yaml  organism_trends_weighted_vote_count_wald_literatur.yaml  organismus_trends_wald.yaml
configs/experiment/: organism_trends.yaml  persona.yaml  single_schema.yaml  trends.yaml  two_schemata.yaml
configs/experiment/evaluate/: faktencheck_confusion_matrix.yaml  faktencheck_core_f1_micro.yaml  faktencheck_core_f1_micro_flat.yaml  faktencheck_core_f1_micro_flat_corrected.yaml  faktencheck_f1_micro.yaml  faktencheck_f1_micro_flat.yaml  organism_trends_confusion_matrix.yaml  organism_trends_f1_micro.yaml  organism_trends_f1_micro_base_entries.yaml  organism_trends_f1_micro_conditional_variable_and_trend.yaml  organism_trends_f1_micro_conditional_variable_only.yaml  organism_trends_f1_micro_flat.yaml  prediction_errors.yaml
configs/experiment/predict/: _with_evidence.yaml  faktencheck_biodiversitylevel.yaml  faktencheck_core_ensemble_gpt_oss_and_qwen3.yaml  faktencheck_core_fields_schema.yaml  faktencheck_core_fields_schema_for_chunking.yaml  faktencheck_core_fields_schema_with_chunking.yaml  faktencheck_core_fields_schema_with_evidence.yaml  faktencheck_ecosystemtype_term.yaml  faktencheck_habitat.yaml  faktencheck_important_fields_only.yaml  faktencheck_most_important_schema.yaml  faktencheck_persona.yaml  faktencheck_single_schema.yaml  faktencheck_taxa.yaml  faktencheck_two_schemata.yaml  organism_trends.yaml  organism_trends_v2.yaml  organism_trends_with_chunking.yaml  organism_trends_with_evidence.yaml
configs/extractor/: _repeat.yaml  _simple.yaml  _simple_local.yaml  _template.yaml  _template_conditional_with_schema.yaml  _template_with_schema.yaml  _template_with_schema_in_user_message.yaml  _union.yaml  _with_persona.yaml  chunking.yaml  conditional_union.yaml  conditional_union_with_schema.yaml  ensemble.yaml  repeat.yaml  repeat_with_schema.yaml  simple.yaml  simple_local.yaml  simple_with_schema.yaml  union.yaml  union_with_schema.yaml  union_with_schema_and_persona.yaml
configs/extractor/aggregator/: majority_vote.yaml  single_majority_vote_multi_union.yaml  unanimous.yaml
configs/extractor/extra_body/: default.yaml
configs/extractor/llm/: deepseek_r1_distill_qwen-32b_in_process.yaml  gemma3_27B_it.yaml  gemma3_27b.yaml  gemma3_27b_in_process.yaml  gemma3_27b_it.yaml  gpt_5.yaml  gpt_openai.yaml  gpt_oss_20b.yaml  gpt_oss_20b_in_process.yaml  gpt_oss_20b_inplace.yaml  gpt_oss_20b_local.yaml  ministral_3_14b.yaml  ministral_3_14b_in_process.yaml  ministral_3_14b_reasoning_2512.yaml  mistral_small_3_24b.yaml  mistral_small_3_24b_in_process.yaml  mistral_small_3_2_24b_instruct_2506.yaml  nemotron_nano_12b.yaml  nemotron_nano_12b_in_process.yaml  nemotron_nano_12b_v2.yaml  nemotron_nano_3_30b.yaml  nemotron_nano_3_30b_in_process.yaml  nvidia_nemotron_nano_12B_v2.yaml  nvidia_nemotron_nano_12b_v2.yaml  olmo_3_1_32b_think.yaml  olmo_3_1_32b_think_in_process.yaml  qwen3_30B_A3B_Thinking_2507.yaml  qwen3_30b.yaml  qwen3_30b_a3b_thinking_2507.yaml  qwen3_30b_in_process.yaml
configs/extractor/model/: gpt_oss_20b.yaml
configs/hydra/: default.yaml
configs/metric/: confusion_matrix.yaml  f1.yaml  f1_collection.yaml  f1_micro.yaml  f1_micro_flat.yaml  f1_micro_single_field.yaml  f1_multi.yaml  f1_multiple_fields.yaml  f1_single.yaml  f1_single_field.yaml  prediction_errors.yaml
configs/model/: gpt_oss_20b.yaml
configs/paths/: default.yaml  evaluate.yaml  predict.yaml
configs/pdf_reader/: pymupdf4llm.yaml
configs/template/: v1.yaml  v1_with_schema.yaml
data/faktencheck/: README.md  docker-compose.yml
data/faktencheck-db/: README.md
data/prediction_results/: readme.md
data/results/: readme.md
docker/faktencheck-db/: README.md  docker-compose.yml
docs/: eval-dashboard.html  extractors.md  index.md  mkdocs.yml  models-readme.md  models_readme.md  podman-readme.md  podman_readme.md  root-readme.md  root_readme.md
docs/Dokumentation/: CODEBASE_DESCRIPTION.md
docs/docs/: eval-dashboard.data-works.html  eval-dashboard.html  index.md
docs/kibad_llm/: config.md  evaluate.md  metric.md  predict.md  preprocessing.md
docs/reports/: CODEBASE_DESCRIPTION.md
kibad_llm/: plots.py
kibad_llm/data_integration/: db_converter.py  queries.py
kibad_llm/modeling/: predict.py
models/: README.md  vllm.env  vllm_logging_config.json
models-readme/: index.html
models/chat-templates/: teuken.jinja
notebooks/: multirun_plot_f1.ipynb  plot_evaluation.ipynb  plot_multirun_evaluation.ipynb  prediction-analysis.ipynb  run_results.md
podman-readme/: index.html
podman/faktencheck-db/: README.md
reference/SUMMARY/: index.html
reference/kibad_llm/: index.html
root-readme/: index.html
scripts/: build_docs.py  db_converter.py  queries.py
search/: search_index.json
src/kibad_llm/: __init__.py  config.py  dataset.py  evaluate.py  extraction.py  features.py  metric.py  predict.py  preprocessing.py
tests/: __init__.py  conftest.py  test_data.py
tests/fixtures/: test_dont_write.py
tests/integration/: conftest.py  test_evaluation.py  test_extract.py  test_extractors.py  test_predict.py
tests/unit/: test_db_converter.py  test_extraction.py  test_extractors.py  test_predict.py  test_preprocessing.py
(+11065 files in other folders)
