[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kibad-llm"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Your name (or your organization/company/team)" }]
requires-python = ">=3.10.0"
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = [
    "LICENSE",
]
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "pandas>=2.3.3,<3.0.0", # for zotero_download.py
    "psycopg2-binary>=2.9.10", # for db_converter.py
    "pyyaml>=6.0.3", # for db_converter.py
    "requests>=2.32.5", # for zotero_download.py
    "retry>=0.9.2", # for zotero_download.py
    "defusedxml>=0.7.1", # for synch_nextcloud_with_cluster.py
    "pymupdf4llm>=0.0.27", # pdf to markdown conversion
    "llama-index-llms-openai-like>=0.5.3,<0.6", # for LLM (externally vllm hosted) integration, e.g. gpt-oss
    "llama-index-llms-openai>=0.6.8,<0.7", # for LLM (openai hosted) integration, e.g. gpt-5
    "jsonschema>=4.25.1", # for structured output schema validation
    "vllm>=0.12.0,<0.13.0", # for vLLM-in-process LLM integration
    # utils & other
    "tqdm>=4.67.1",
    "typer>=0.19.2",
    "python-dotenv>=1.1.1",
    "loguru>=0.7.3",
    "hydra-core>=1.3.2",
    "hydra-colorlog>=1.2.0",
    "datasets<4.0.0",
    "pdfplumber>=0.11.7",
    "tabulate>=0.9.0", # to create markdown from pandas dataframes (e.g., in SaveJobReturnValueCallback)
    "gitpython>=3.1.45",
    "jupyter>=1.1.1,<2.0.0", # to run jupyter notebooks
    "matplotlib>=3.10.8,<4.0.0", # to run eval notebook (create plots)
    "types-regex>=2026.1.15.20260116",
]

[dependency-groups]
cicd = [
    # packages needed for their types
    "pymupdf4llm>=0.0.27", # pdf to markdown conversion
    "datasets<4.0.0",
    "gitpython>=3.1.45",
    "python-dotenv>=1.1.1",
    "openai>=2.15.0",
    "torch>=2.9.0",
    "llama-index-llms-openai-like>=0.5.3,<0.6", # for LLM (externally vllm hosted) integration, e.g. gpt-oss
    "llama-index-llms-openai>=0.6.8,<0.7", # for LLM (openai hosted) integration, e.g. gpt-5
    "hydra-core>=1.3.2",
    "vllm>=0.12.0,<0.13.0", # for vLLM-in-process LLM integration
    # stub packages
    "lxml-stubs>=0.5.1",
    "scipy-stubs>=1.15.3.0",
    "pandas-stubs>=2.3.2.250926", # for zotero_download.py
    "types-psycopg2>=2.9.21.20250915", # for db_converter.py
    "types-pyyaml>=6.0.12.20250915", # for db_converter.py
    "types-retry>=0.9.9.20250322", # for zotero_download.py
    "types-defusedxml>=0.7.0.20250822", # for synch_nextcloud_with_cluster.py
    "types-tqdm>=4.67.0.20250809",
    "types-deprecated>=1.3.1.20260130",
    "types-pysocks>=1.7.1.20251001",
    "types-pygments>=2.19.0.20251121",
    "types-antlr4-python3-runtime>=4.13.0.20251118",
    "types-cachetools>=6.2.0.20260317",
    "types-colorama>=0.4.15.20250801",
    "types-decorator>=5.2.0.20251101",
    "types-greenlet>=3.3.0.20251206",
    "types-grpcio>=1.0.0.20251009",
    "types-html5lib>=1.1.11.20251117",
    "types-networkx>=3.6.1.20260321",
    "types-openpyxl>=3.1.5.20260322",
    "types-pexpect>=4.9.0.20260127",
    "types-protobuf>=6.32.1.20260221",
    "types-psutil>=7.2.2.20260130",
    "types-pycurl>=7.45.7.20260316",
    "types-python-dateutil>=2.9.0.20260323",
    "types-pywin32>=311.0.0.20260323",
    "types-regex>=2026.3.32.20260329",
    "types-setuptools>=82.0.0.20260210",
    "types-simplejson>=3.20.0.20250822",
    "types-tabulate>=0.10.0.20260308",
    "types-tensorflow>=2.18.0.20260322",
    "types-ujson>=5.10.0.20250822",
    "types-xlrd>=2.0.0.20251020",
    "types-jsonschema>=4.25.1.20251009",
    # actual cicd testing packages
    "pytest>=6.2.5",
    "pytest-xdist>=3.8.0,<4",
    "pytest-cov>=6.2.1,<7",
    "typeguard>=2.13.3",
    "prek>=0.3.8",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.3",
    "pymdown-extensions>=10.20.1",
    "check-mkdocs>=1.1.6",
    "mkdocs-gen-files>=0.6.1",
    "mkdocs-literate-nav>=0.6.3",
    "mkdocs-section-index>=0.3.11",
    "properdocs>=1.6.7",
    "zuban>=0.6.2",
]

[tool.hatch.build.targets.sdist]
include = ["src/kibad_llm"]

[tool.hatch.build.targets.wheel]
include = ["src/kibad_llm"]

[tool.hatch.build.targets.wheel.sources]
"src/kibad_llm" = "kibad_llm"

[tool.pytest.ini_options]
typeguard-packages = "kibad_llm"
minversion = "6.0"
testpaths = ["tests"]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "typeguard_ignore: ignore typeguard in this test"
]

[tool.coverage.run]
branch = true
source = ["kibad_llm"]   # measure only your package (src layout is fine)

[tool.coverage.report]
show_missing = true

[tool.black]
line-length = 99
# limit Black’s directory walk to real Python files only (.py / .pyi);
# avoids touching other extensions and speeds discovery on large repos
include = '\.pyi?$'
# don’t even scan common “noise” dirs (.git, virtualenv) when walking the tree;
# keeps runs fast and prevents accidental formatting of vendored/ephemeral files.
# triple-quoted here on purpose: Black treats multiline patterns as “verbose”
# regex, making it easy to extend later.
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["kibad_llm"]
force_sort_within_sections = true

[tool.flake8]
ignore = ["E203", "E266", "E402", "E501", "F401", "F841", "C901", "W503", "E731", "E741"]
max-line-length = 99
exclude = [".git", "notebooks", "models", "data", "logs"]

[tool.codespell]
skip = "logs/**,data/**,configs/**/*template*,configs/evaluate.yaml,tests/fixtures/**.json,tests/fixtures/**.jsonl,src/kibad_llm/schema/**,tests/unit/schema/**,*.ipynb"
ignore-words-list = "hist"

# Bandit (read by prek bandit with -c pyproject.toml)
[tool.bandit]
skips = ["B101", "B107", "B403"]
# optionally exclude tests to reduce noise:
# exclude_dirs = ["tests"]

# mdformat (via mdformat-pyproject); tweak if you want numbering/wrapping
[tool.mdformat]
wrap = "keep"          # {"keep","no",INTEGER}
number = false         # consecutive numbering for ordered lists
end_of_line = "lf"
validate = true

# (optional) nbQA-specific knobs if you need them later:
# [tool.nbqa.config]
# black = "pyproject.toml"
# isort = "pyproject.toml"
# flake8 = "pyproject.toml"

[tool.nbqa.addopts]
flake8 = [
    "--extend-ignore=E501"
]

[tool.mypy]
python_version = "3.10"
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["pymupdf4llm.*", "datasets.*", "llama_index.llms.openai_like.*"]
follow_untyped_imports = true
